--- a/Persona/backend/package.json
+++ b/Persona/backend/package.json
@@ -13,12 +13,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
     "readline": "^1.3.0",
-    "stripe": "^20.0.0"
+    "stripe": "^20.2.0"
   }
 }
