--- a/Persona/frontend/package.json
+++ b/Persona/frontend/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@react-pdf/renderer": "^4.3.2",
     "axios": "^1.6.2",
     "fabric": "^7.0.0",
     "framer-motion": "^12.23.26",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.561.0",
     "next": "^14.2.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.5.6",
+    "react-to-print": "^3.2.0",
     "sonner": "^2.0.7"
   },
   "devDependencies": {
