--- a/Persona/frontend/package.json
+++ b/Persona/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.2",
     "fabric": "^7.0.0",
     "framer-motion": "^12.23.26",
+    "jspdf": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.561.0",
     "next": "^14.2.35",
