--- a/Persona/frontend/package.json
+++ b/Persona/frontend/package.json
@@ -13,9 +13,12 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@react-pdf/renderer": "^4.3.2",
+    "@svgr/webpack": "^8.1.0",
+    "@use-gesture/react": "^10.3.1",
     "axios": "^1.6.2",
-    "fabric": "^7.0.0",
+    "fabric": "^7.1.0",
     "framer-motion": "^12.23.26",
+    "html-to-image": "^1.11.13",
     "jspdf": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.561.0",
@@ -23,6 +26,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.5.6",
+    "react-moveable": "^0.56.0",
+    "react-spring": "^10.0.3",
     "react-to-print": "^3.2.0",
     "sonner": "^2.0.7"
   },
